firmware/build/log/idf_py_stderr_output_45814
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp: In member function 'virtual esp_err_t LedcPulseGenerator::stop(float)':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp:469:27: error: 'pulse_count_' was not declared in this scope
  469 |     int64_t current_pos = pulse_count_.load(std::memory_order_relaxed);
      |                           ^~~~~~~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp: In member function 'virtual void LedcPulseGenerator::stopImmediate()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp:493:27: error: 'pulse_count_' was not declared in this scope
  493 |     int64_t final_count = pulse_count_.load(std::memory_order_relaxed);
      |                           ^~~~~~~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp: In member function 'void LedcPulseGenerator::notifyCompletion()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp:763:29: error: 'pulse_count_' was not declared in this scope
  763 |             int64_t total = pulse_count_.load(std::memory_order_relaxed);
      |                             ^~~~~~~~~~~~
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/ledc_pulse_gen.cpp.obj] Error 1
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
